--- a/app/views/doctor/dashboard/show.html.erb
+++ b/app/views/doctor/dashboard/show.html.erb
@@ -1,1 +1,6 @@
 <%= line_chart @patient_trends %>
+<%# For doctor dashboard link %>
+<%= link_to "Dashboard", doctor_root_path %>
+
+<%# For patient trends link %>
+<%= link_to "Patient Trends", doctor_patient_trends_path %>
