--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,41 +6,27 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
+    <!-- Load Charting Libraries FIRST -->
+    <%= javascript_include_tag "https://www.gstatic.com/charts/loader.js" %>
+    <%= javascript_include_tag "chartkick" %>
+    
+    <!-- Then load other JS -->
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_include_tag "rails-ujs" %>
-    <%= javascript_importmap_tags %>  <!-- Changed this line -->
+    <%= javascript_importmap_tags %>
     
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+
+    <!-- Chart.js as fallback -->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   </head>
 
-  
-
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-      <div class="container">
-        <a class="navbar-brand" href="#">Medical Portal</a>
-        <div class="navbar-nav ms-auto">
-          <% if user_signed_in? %>
-            <span class="navbar-text me-3">
-              Logged in as <strong><%= current_user.email %></strong> (<%= current_user.role %>)
-            </span>
-            <%= link_to "Logout", destroy_user_session_path, method: :delete, class: "nav-link" %>
-          <% else %>
-            <%= link_to "Login", new_user_session_path, class: "nav-link" %>
-          <% end %>
-        </div>
-      </div>
-    </nav>
-
+    <%= render 'shared/navbar' %>
+    
     <div class="container mt-4">
-      <% if notice %>
-        <p class="alert alert-success"><%= notice %></p>
-      <% end %>
-      <% if alert %>
-        <p class="alert alert-danger"><%= alert %></p>
-      <% end %>
-
+      <%= render 'shared/flashes' %>
       <%= yield %>
     </div>
   </body>
