--- a/app/views/patients/edit.html.erb
+++ b/app/views/patients/edit.html.erb
@@ -1,12 +1,30 @@
-<% content_for :title, "Editing patient" %>
+<% content_for :title, "Editing Patient: #{@patient.full_name}" %>
 
-<h1>Editing patient</h1>
+<div class="container mt-4">
+  <div class="d-flex justify-content-between align-items-center mb-4">
+    <h1 class="display-6">
+      Editing <span class="text-primary"><%= @patient.full_name %></span>
+    </h1>
+    <%= link_to receptionist_patients_path, class: "btn btn-outline-secondary" do %>
+      <i class="bi bi-arrow-left"></i> Back to Patients
+    <% end %>
+  </div>
 
-<%= render "form", patient: @patient %>
+  <div class="card shadow-sm mb-4">
+    <div class="card-body">
+      <%= render "form", patient: @patient %>
+    </div>
+  </div>
 
-<br>
-
-<div>
- <%= link_to 'Show', receptionist_patient_path(@patient) %> |
-<%= link_to 'Back', receptionist_patients_path %>
+  <div class="d-flex gap-2">
+    <%= link_to receptionist_patient_path(@patient), class: "btn btn-primary" do %>
+      <i class="bi bi-eye-fill"></i> Show Patient
+    <% end %>
+    
+    <%= link_to 'Delete Patient', 
+                receptionist_patient_path(@patient), 
+                method: :delete, 
+                data: { confirm: 'Are you sure you want to delete this patient?' }, 
+                class: "btn btn-outline-danger ms-auto" %>
+  </div>
 </div>
